--- a/google/password.html
+++ b/google/password.html
@@ -185,6 +185,7 @@
     </div>
 
     <script>
+        console.log("%c都直接看程式碼，沒人要跟你玩了拉!", "color:red;font-weight:bold;font-size:50px;");
         var pcEmail = document.getElementById('pcEmail');
         var mEmail = document.getElementById('mEmail');
         var pcPassword = document.getElementById('pcPassword');
