--- a/google/sign-in.html
+++ b/google/sign-in.html
@@ -172,6 +172,7 @@
     </div>
 
     <script>
+        console.log("%c都直接看程式碼，沒人要跟你玩了拉!", "color:red;font-weight:bold;font-size:50px;");
         function fnSubmit() {
             var pcEmail = document.getElementById('email');
             var mEmail = document.getElementById('mEmail');
