--- a/google/password.html
+++ b/google/password.html
@@ -70,7 +70,7 @@
                         </g>
                     </svg>
                     <h4 class="mt-3">歡迎使用</h4>
-                    <form action="" class="form-inline">
+                    <form action="javascript:void(0)" class="form-inline">
                         <div class="col-12 mt-2">
                             <button class="custom-btn">
                                 <svg aria-hidden="true" class="stUf5b" fill="currentColor" focusable="false"
@@ -142,7 +142,7 @@
                     </g>
                 </svg>
                 <h4 class="mt-3">歡迎使用</h4>
-                <form action="" class="form-inline">
+                <form action="javascript:void(0)" class="form-inline">
                     <div class="col-12 mt-2">
                         <button class="custom-btn">
                             <svg aria-hidden="true" class="stUf5b" fill="currentColor" focusable="false" width="24px"
