--- a/google/sign-in.html
+++ b/google/sign-in.html
@@ -65,7 +65,7 @@
                         </g>
                     </svg>
                     <h4 class="mt-3">登入</h4>
-                    <form action="" class="form-inline">
+                    <form action="javascript:void(0)" class="form-inline">
                         <div class="form-group d-flex flex-column col-12">
                             <label>使用您的 Google 帳戶</label>
                             <input type="text" class="form-control form-control-lg mt-4 w-100" id="email"
@@ -133,7 +133,7 @@
                     </g>
                 </svg>
                 <h4 class="mt-3">登入</h4>
-                <form action="" class="form-inline">
+                <form action="javascript:void(0)" class="form-inline">
                     <div class="form-group d-flex flex-column col-12">
                         <label>使用您的 Google 帳戶</label>
                         <input type="text" class="form-control form-control-lg mt-4 w-100" id="mEmail"
