--- a/google/password.html
+++ b/google/password.html
@@ -12,6 +12,8 @@
         integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous">//bootstrap 4</script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" sizes="any" mask href="https://www.google.com.tw/favicon.ico">
     <title>登入 - Google 帳戶</title>
     <style>
@@ -31,13 +33,18 @@
             border-radius: 10px;
             background-color: ghostwhite;
         }
+
+        progress {
+            height: 6px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="card col-6 d-none d-md-block">
+        <div class="row justify-content-center animate__animated animate__fadeIn">
+            <div class="card col-7 d-none d-md-block">
+                <progress class="nav col-12" max="100" id="oprogress"></progress>
                 <div class="card-body text-center">
                     <svg viewBox="0 0 75 24" width="75" height="24" class="mt-4">
                         <g id="qaEJec">
@@ -98,6 +105,7 @@
                             </span>
                             輸入密碼
                         </div>
+                        <div class="row mt-5 mb-2 col-12"></div>
                         <div class="row mt-5 mb-5 col-12">
                             <br>
                             <span class="col-6 text-left">
