--- a/google/sign-in.html
+++ b/google/sign-in.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="icon" sizes="any" mask href="https://www.google.com.tw/favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <title>登入 - Google 帳戶</title>
     <style>
         html,
