--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
         <img src="./title.png" alt="">
         <a href="./google/sign-in.html" ><p class="animated bounceInRight" >Google</p></a>
-        <a href="" ><p class="animated bounceInLeft" >(尚未製作)</p></a>
+        <a href="./gamer/login_php.html" ><p class="animated bounceInLeft" >巴哈姆特</p></a>
         <a href="" ><p class="animated bounceInRight">(尚未製作)</p></a>
         <a href="" ><p class="animated bounceInLeft">(尚未製作)</p></a>
         <a href=""><p class="animated bounceInRight">(尚未製作)</p></a>
